# base_gl_project

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
